@@ -1,6 +1,7 @@
 8.0.5
 -----
-
+(RB=825708)
+Add request details to the quarantine health checking logs
 
 8.0.4
 -----
